# doc-evergreen

./: .docignore  AGENTS.md  CHANGELOG.md  GetStarted copy.md  GetStarted.md  GetStartedNew.md  INSTALLATION.md  LICENSE  QUICK_START_v0.5.0.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.5.0.md  RELEASE_v0.4.1.md  pyproject.toml  test_llm_analyzer.py
.ai_working/: README.md
.amplifier/: settings.local.yaml
.beads/: beads.jsonl
.claude/: settings.local.json
.doc-evergreen/: context.json  file_index.json  outline.json  readme.json  relevance_notes.json  tutorial-first-template.json  tutorial-quickstart.json
docs/: BEST_PRACTICES.md  FIRST_TEMPLATE.md  INSTALLATION.md  MIGRATION_v0.3_to_v0.4.md  TEMPLATES.md  TEMPLATE_BEST_PRACTICES.md  TEMPLATE_QUALITY.md  USER_GUIDE.md
evaluations/: ground_truth_test_cases.json  run_day5_checkpoint.py
examples/: nested.json  simple.json
scripts/: run_day5_checkpoint.py
src/: __init__.py  cli.py  context_manager.py
templates/: amplifier_readme.json  cli_tool_guide.json  example_template.json  self_documenting.json
tests/: __init__.py  test_accuracy_validator.py  test_change_detection.py  test_chunked_generator.py  test_cli_installation.py  test_cli_mode_removal.py  test_cli_template_flags.py  test_content_intent_analyzer.py  test_context_manager.py  test_cross_directory_usage.py  test_cwd_path_resolution.py  test_doc_generator.py  test_doc_type_validation.py  test_document_metadata.py  test_document_parser.py  test_full_workflow_init_to_regen.py  test_generate_doc_cli.py  test_generate_outline_cli.py  (+21 more)
(+131 files in other folders)
