[project]
name = "doc-evergreen"
version = "0.5.0"
description = "AI-powered documentation generation from templates"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "doc-evergreen contributors"}
]
keywords = ["documentation", "ai", "code-generation", "templates"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "click>=8.1.0",
    "pydantic-ai>=0.0.14",
]

[project.scripts]
doc-evergreen = "doc_evergreen.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
